--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,10 @@
     </head>
 
     <body>
-        <h1>Delete me :)</h1>
         <noscript
             >You need to enable JavaScript in order to run this application.</noscript
         >
         <div id="app"></div>
-        <script src="./app.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
